--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>my.company</groupId>
-    <artifactId>PuntoDeVenta</artifactId>
+    <artifactId>AbarroteMolina</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
     <dependencies>
@@ -18,4 +18,5 @@
         <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>PuntoDeVenta</exec.mainClass>
     </properties>
+    <name>AbarroteMolina</name>
 </project>
